<resources>
    <string name="app_name">Sway Light test</string>

    <string name="connect">Connect</string>
    <string name="config">Configuration</string>

    <string-array name="modes">
        <item>Music</item>
        <item>Light</item>
        <item>ClockSetting</item>
    </string-array>

    <string-array name="level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="brokers">
        <item>172.20.10.6</item>
        <item>172.20.10.4</item>
        <item>192.168.0.103</item>
    </string-array>

    <string name="r">red</string>
    <string name="g">green</string>
    <string name="b">blue</string>
    <string name="lvl">level</string>
    <string name="brightness">brightness</string>
    <string name="offset">offset</string>
    <string name="zoom">zoom</string>

    <!--  Modes  -->
    <string name="musicMode">Music Mode</string>
    <string name="lightMode">Light Mode</string>

    <!--  Connect status  -->
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="reconnect">Reconnected</string>

    <!--  time  -->
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="enable">enable</string>

    <!-- EXTRA STRING -->
    <string name="DEVICE_NAME">DEVICE_NAME</string>
    <string name="MQTT_BROKER">MQTT_BROKER</string>
    <string name="MQTT_CLIENT_ID">MQTT_CLIENT_ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
